attempt at making youtube video responsive, fixed look of mobile menu (lower font size used, adjusted spacing)

--- a/css/menu.css
+++ b/css/menu.css
@@ -56,7 +56,7 @@
 /* ====== MOBILE MENU ====== */
 
 #mobileMenu{
-  background-color: rgba(30, 30, 30, 0.95);
+  background-color: rgba(30, 30, 30, 0.97);
   width: 100%;
   height:100%;
   margin: auto;
@@ -84,18 +84,19 @@
 
 
 #mobileMenu ul.mobileMenuChoices{
-  margin:0 auto 15px;
+  margin:15px auto 15px;
   padding:0;
 }
 
 
 #mobileMenu ul.mobileMenuChoices a{
-font-size:32px;
+font-size:24px;
 color:lightgray;
 font-family:roboto slab,georgia,serif;
 font-weight:400;
 padding-bottom:5px;
 letter-spacing:.03em
+
 }
 
 #mobileMenu ul.mobileMenuChoices a:hover{
@@ -108,7 +109,7 @@ text-decoration:none;
 
 width:270px;
 margin:0 auto;
-padding:0
+
 }
 
 #mobileMenu ul.socialIconsMenu li{
@@ -130,8 +131,7 @@ padding:0
 
 #mobileMenu ul.socialIconsMenu li a{
 
-  margin-right:0px;
-  padding:17px;
+  padding:10px;
 
 
 }
@@ -165,7 +165,7 @@ padding:0
 
 
 #mobileMenu ul.mobileMenuChoices li.mmChoice{
-  padding:7px 0;
+  padding:3px 0;
   position: relative;
   top:0px;
 }
@@ -198,7 +198,7 @@ padding:0
 
 
 .fa {
-   font-size: 28px;
+   font-size: 20px;
    text-align: center;
    text-decoration: none;
    color:lightgray;
